<resources>
    <string name="app_name">表情搜搜demo</string>
    <string name="biaoqingsousou">表情搜搜</string>
    <string name="quater_screen_cn">联想搜索</string>
    <string name="half_screen_cn">键盘搜索</string>
    <string name="full_screen_cn">全屏搜索</string>
    <string name="quater_screen_en">Quater Screen</string>
    <string name="half_screen_en">Half Screen</string>
    <string name="full_screen_en">Full Screen</string>
    <string name="version">版本 V1.0</string>
    <string name="home_page">首页</string>
    <string name="search_interseting_sticker">搜索感兴趣的图片</string>
    <string name="search">搜索</string>
    <string name="turn_to_bottom">------ 已经到底了 -------</string>
    <string name="cancel">取消</string>
    <string name="send">发送</string>
    <string name="preview_sticker">图片预览</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清除</string>
    <string name="search_a_sticker">搜个表情</string>
</resources>
