<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="195dp"
                    android:background="@mipmap/banner">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_marginBottom="30dp"
                  android:layout_marginLeft="30dp"
                  android:text="@string/biaoqingsousou"
                  android:textColor="@color/black"
                  android:textSize="24sp"
                  android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/quater_search_btn"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerVertical="true"
                      android:layout_marginLeft="35dp"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/quater_screen_cn"
                      android:textColor="@color/black"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:text="@string/quater_screen_en"
                      android:textColor="@color/black"
                      android:textSize="18sp"/>
        </LinearLayout>
        <ImageView android:layout_width="11dp"
                   android:layout_height="21dp"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:layout_marginRight="30dp"
                   android:src="@mipmap/go"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_alignParentBottom="true"
              android:layout_marginLeft="10dp"
              android:background="@color/gray_97"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/half_search_btn"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerVertical="true"
                      android:layout_marginLeft="35dp"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/half_screen_cn"
                      android:textColor="@color/black"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:text="@string/half_screen_en"
                      android:textColor="@color/black"
                      android:textSize="18sp"/>
        </LinearLayout>
        <ImageView android:layout_width="11dp"
                   android:layout_height="21dp"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:layout_marginRight="30dp"
                   android:src="@mipmap/go"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_alignParentBottom="true"
              android:layout_marginLeft="10dp"
              android:background="@color/gray_97"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/full_search_btn"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerVertical="true"
                      android:layout_marginLeft="35dp"
                      android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/full_screen_cn"
                      android:textColor="@color/black"
                      android:textSize="18sp"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:text="@string/full_screen_en"
                      android:textColor="@color/black"
                      android:textSize="18sp"/>
        </LinearLayout>
        <ImageView android:layout_width="11dp"
                   android:layout_height="21dp"
                   android:layout_alignParentRight="true"
                   android:layout_centerVertical="true"
                   android:layout_marginRight="30dp"
                   android:src="@mipmap/go"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_alignParentBottom="true"
              android:layout_marginLeft="10dp"
              android:background="@color/gray_97"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="12sp"
                  android:layout_alignParentBottom="true"
                  android:layout_centerHorizontal="true"
                  android:layout_marginBottom="15dp"
                  android:text="@string/version"
                  android:textColor="@color/gray_97"/>
    </RelativeLayout>

</LinearLayout>
