<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:transcriptMode="alwaysScroll"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <include layout="@layout/text_send_item"/>

        <LinearLayout
            android:id="@+id/bqss_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/top_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_d8"/>

            <LinearLayout
                android:id="@+id/bqss_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/bqss_editview"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5"
                    android:background="@drawable/shape_edittext"
                    android:drawablePadding="3dp"
                    android:hint="@string/search_interseting_sticker"
                    android:imeActionLabel="@string/search"
                    android:imeOptions="actionSearch"
                    android:paddingLeft="6dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray_97"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/blue_1B"
                    android:textSize="20sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_d8"/>
        </LinearLayout>

    </FrameLayout>

    <include layout="@layout/bottom_bar"/>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </GridView>
</LinearLayout>